src/parser.output
Grammar

    0 $accept: formulae $end

    1 formulae: %empty
    2         | formulae formula

    3 formula: LEFT_BRACKET formula RIGHT_BRACKET
    4        | unary_formula
    5        | binary_formula
    6        | AND_TEXT LEFT_BRACKET LEFT_SQUARE_BRACKET formula_list_at_least_two RIGHT_SQUARE_BRACKET RIGHT_BRACKET
    7        | OR_TEXT LEFT_BRACKET LEFT_SQUARE_BRACKET formula_list_at_least_two RIGHT_SQUARE_BRACKET RIGHT_BRACKET
    8        | AND_TEXT LEFT_BRACKET LEFT_SQUARE_BRACKET formula RIGHT_SQUARE_BRACKET RIGHT_BRACKET
    9        | OR_TEXT LEFT_BRACKET LEFT_SQUARE_BRACKET formula RIGHT_SQUARE_BRACKET RIGHT_BRACKET
   10        | NAME

   11 formula_list_at_least_two: formula COMMA formula
   12                          | formula_list_at_least_two COMMA formula

   13 binary_formula: formula AND formula
   14               | formula OR formula
   15               | formula UNTIL formula
   16               | formula UNLESS formula
   17               | formula IMPLICATION formula
   18               | formula EQUIVALENCE formula

   19 unary_formula: TRUE
   20              | FALSE
   21              | NOT formula
   22              | ALWAYS formula
   23              | NEXT formula
   24              | SOMETIME formula


Terminals, with rules where they appear

$end (0) 0
error (256)
FALSE (258) 20
TRUE (259) 19
NAME (260) 10
NOT (261) 21
AND (262) 13
AND_TEXT (263) 6 8
OR (264) 14
OR_TEXT (265) 7 9
IMPLICATION (266) 17
EQUIVALENCE (267) 18
NEXT (268) 23
ALWAYS (269) 22
SOMETIME (270) 24
UNTIL (271) 15
UNLESS (272) 16
LEFT_BRACKET (273) 3 6 7 8 9
RIGHT_BRACKET (274) 3 6 7 8 9
COMMA (275) 11 12
LEFT_SQUARE_BRACKET (276) 6 7 8 9
RIGHT_SQUARE_BRACKET (277) 6 7 8 9


Nonterminals, with rules where they appear

$accept (23)
    on left: 0
formulae (24)
    on left: 1 2, on right: 0 2
formula (25)
    on left: 3 4 5 6 7 8 9 10, on right: 2 3 8 9 11 12 13 14 15 16
    17 18 21 22 23 24
formula_list_at_least_two (26)
    on left: 11 12, on right: 6 7 12
binary_formula (27)
    on left: 13 14 15 16 17 18, on right: 5
unary_formula (28)
    on left: 19 20 21 22 23 24, on right: 4


State 0

    0 $accept: . formulae $end

    $default  reduce using rule 1 (formulae)

    formulae  go to state 1


State 1

    0 $accept: formulae . $end
    2 formulae: formulae . formula

    $end          shift, and go to state 2
    FALSE         shift, and go to state 3
    TRUE          shift, and go to state 4
    NAME          shift, and go to state 5
    NOT           shift, and go to state 6
    AND_TEXT      shift, and go to state 7
    OR_TEXT       shift, and go to state 8
    NEXT          shift, and go to state 9
    ALWAYS        shift, and go to state 10
    SOMETIME      shift, and go to state 11
    LEFT_BRACKET  shift, and go to state 12

    formula         go to state 13
    binary_formula  go to state 14
    unary_formula   go to state 15


State 2

    0 $accept: formulae $end .

    $default  accept


State 3

   20 unary_formula: FALSE .

    $default  reduce using rule 20 (unary_formula)


State 4

   19 unary_formula: TRUE .

    $default  reduce using rule 19 (unary_formula)


State 5

   10 formula: NAME .

    $default  reduce using rule 10 (formula)


State 6

   21 unary_formula: NOT . formula

    FALSE         shift, and go to state 3
    TRUE          shift, and go to state 4
    NAME          shift, and go to state 5
    NOT           shift, and go to state 6
    AND_TEXT      shift, and go to state 7
    OR_TEXT       shift, and go to state 8
    NEXT          shift, and go to state 9
    ALWAYS        shift, and go to state 10
    SOMETIME      shift, and go to state 11
    LEFT_BRACKET  shift, and go to state 12

    formula         go to state 16
    binary_formula  go to state 14
    unary_formula   go to state 15


State 7

    6 formula: AND_TEXT . LEFT_BRACKET LEFT_SQUARE_BRACKET formula_list_at_least_two RIGHT_SQUARE_BRACKET RIGHT_BRACKET
    8        | AND_TEXT . LEFT_BRACKET LEFT_SQUARE_BRACKET formula RIGHT_SQUARE_BRACKET RIGHT_BRACKET

    LEFT_BRACKET  shift, and go to state 17


State 8

    7 formula: OR_TEXT . LEFT_BRACKET LEFT_SQUARE_BRACKET formula_list_at_least_two RIGHT_SQUARE_BRACKET RIGHT_BRACKET
    9        | OR_TEXT . LEFT_BRACKET LEFT_SQUARE_BRACKET formula RIGHT_SQUARE_BRACKET RIGHT_BRACKET

    LEFT_BRACKET  shift, and go to state 18


State 9

   23 unary_formula: NEXT . formula

    FALSE         shift, and go to state 3
    TRUE          shift, and go to state 4
    NAME          shift, and go to state 5
    NOT           shift, and go to state 6
    AND_TEXT      shift, and go to state 7
    OR_TEXT       shift, and go to state 8
    NEXT          shift, and go to state 9
    ALWAYS        shift, and go to state 10
    SOMETIME      shift, and go to state 11
    LEFT_BRACKET  shift, and go to state 12

    formula         go to state 19
    binary_formula  go to state 14
    unary_formula   go to state 15


State 10

   22 unary_formula: ALWAYS . formula

    FALSE         shift, and go to state 3
    TRUE          shift, and go to state 4
    NAME          shift, and go to state 5
    NOT           shift, and go to state 6
    AND_TEXT      shift, and go to state 7
    OR_TEXT       shift, and go to state 8
    NEXT          shift, and go to state 9
    ALWAYS        shift, and go to state 10
    SOMETIME      shift, and go to state 11
    LEFT_BRACKET  shift, and go to state 12

    formula         go to state 20
    binary_formula  go to state 14
    unary_formula   go to state 15


State 11

   24 unary_formula: SOMETIME . formula

    FALSE         shift, and go to state 3
    TRUE          shift, and go to state 4
    NAME          shift, and go to state 5
    NOT           shift, and go to state 6
    AND_TEXT      shift, and go to state 7
    OR_TEXT       shift, and go to state 8
    NEXT          shift, and go to state 9
    ALWAYS        shift, and go to state 10
    SOMETIME      shift, and go to state 11
    LEFT_BRACKET  shift, and go to state 12

    formula         go to state 21
    binary_formula  go to state 14
    unary_formula   go to state 15


State 12

    3 formula: LEFT_BRACKET . formula RIGHT_BRACKET

    FALSE         shift, and go to state 3
    TRUE          shift, and go to state 4
    NAME          shift, and go to state 5
    NOT           shift, and go to state 6
    AND_TEXT      shift, and go to state 7
    OR_TEXT       shift, and go to state 8
    NEXT          shift, and go to state 9
    ALWAYS        shift, and go to state 10
    SOMETIME      shift, and go to state 11
    LEFT_BRACKET  shift, and go to state 12

    formula         go to state 22
    binary_formula  go to state 14
    unary_formula   go to state 15


State 13

    2 formulae: formulae formula .
   13 binary_formula: formula . AND formula
   14               | formula . OR formula
   15               | formula . UNTIL formula
   16               | formula . UNLESS formula
   17               | formula . IMPLICATION formula
   18               | formula . EQUIVALENCE formula

    AND          shift, and go to state 23
    OR           shift, and go to state 24
    IMPLICATION  shift, and go to state 25
    EQUIVALENCE  shift, and go to state 26
    UNTIL        shift, and go to state 27
    UNLESS       shift, and go to state 28

    $default  reduce using rule 2 (formulae)


State 14

    5 formula: binary_formula .

    $default  reduce using rule 5 (formula)


State 15

    4 formula: unary_formula .

    $default  reduce using rule 4 (formula)


State 16

   13 binary_formula: formula . AND formula
   14               | formula . OR formula
   15               | formula . UNTIL formula
   16               | formula . UNLESS formula
   17               | formula . IMPLICATION formula
   18               | formula . EQUIVALENCE formula
   21 unary_formula: NOT formula .

    $default  reduce using rule 21 (unary_formula)


State 17

    6 formula: AND_TEXT LEFT_BRACKET . LEFT_SQUARE_BRACKET formula_list_at_least_two RIGHT_SQUARE_BRACKET RIGHT_BRACKET
    8        | AND_TEXT LEFT_BRACKET . LEFT_SQUARE_BRACKET formula RIGHT_SQUARE_BRACKET RIGHT_BRACKET

    LEFT_SQUARE_BRACKET  shift, and go to state 29


State 18

    7 formula: OR_TEXT LEFT_BRACKET . LEFT_SQUARE_BRACKET formula_list_at_least_two RIGHT_SQUARE_BRACKET RIGHT_BRACKET
    9        | OR_TEXT LEFT_BRACKET . LEFT_SQUARE_BRACKET formula RIGHT_SQUARE_BRACKET RIGHT_BRACKET

    LEFT_SQUARE_BRACKET  shift, and go to state 30


State 19

   13 binary_formula: formula . AND formula
   14               | formula . OR formula
   15               | formula . UNTIL formula
   16               | formula . UNLESS formula
   17               | formula . IMPLICATION formula
   18               | formula . EQUIVALENCE formula
   23 unary_formula: NEXT formula .

    $default  reduce using rule 23 (unary_formula)


State 20

   13 binary_formula: formula . AND formula
   14               | formula . OR formula
   15               | formula . UNTIL formula
   16               | formula . UNLESS formula
   17               | formula . IMPLICATION formula
   18               | formula . EQUIVALENCE formula
   22 unary_formula: ALWAYS formula .

    $default  reduce using rule 22 (unary_formula)


State 21

   13 binary_formula: formula . AND formula
   14               | formula . OR formula
   15               | formula . UNTIL formula
   16               | formula . UNLESS formula
   17               | formula . IMPLICATION formula
   18               | formula . EQUIVALENCE formula
   24 unary_formula: SOMETIME formula .

    $default  reduce using rule 24 (unary_formula)


State 22

    3 formula: LEFT_BRACKET formula . RIGHT_BRACKET
   13 binary_formula: formula . AND formula
   14               | formula . OR formula
   15               | formula . UNTIL formula
   16               | formula . UNLESS formula
   17               | formula . IMPLICATION formula
   18               | formula . EQUIVALENCE formula

    AND            shift, and go to state 23
    OR             shift, and go to state 24
    IMPLICATION    shift, and go to state 25
    EQUIVALENCE    shift, and go to state 26
    UNTIL          shift, and go to state 27
    UNLESS         shift, and go to state 28
    RIGHT_BRACKET  shift, and go to state 31


State 23

   13 binary_formula: formula AND . formula

    FALSE         shift, and go to state 3
    TRUE          shift, and go to state 4
    NAME          shift, and go to state 5
    NOT           shift, and go to state 6
    AND_TEXT      shift, and go to state 7
    OR_TEXT       shift, and go to state 8
    NEXT          shift, and go to state 9
    ALWAYS        shift, and go to state 10
    SOMETIME      shift, and go to state 11
    LEFT_BRACKET  shift, and go to state 12

    formula         go to state 32
    binary_formula  go to state 14
    unary_formula   go to state 15


State 24

   14 binary_formula: formula OR . formula

    FALSE         shift, and go to state 3
    TRUE          shift, and go to state 4
    NAME          shift, and go to state 5
    NOT           shift, and go to state 6
    AND_TEXT      shift, and go to state 7
    OR_TEXT       shift, and go to state 8
    NEXT          shift, and go to state 9
    ALWAYS        shift, and go to state 10
    SOMETIME      shift, and go to state 11
    LEFT_BRACKET  shift, and go to state 12

    formula         go to state 33
    binary_formula  go to state 14
    unary_formula   go to state 15


State 25

   17 binary_formula: formula IMPLICATION . formula

    FALSE         shift, and go to state 3
    TRUE          shift, and go to state 4
    NAME          shift, and go to state 5
    NOT           shift, and go to state 6
    AND_TEXT      shift, and go to state 7
    OR_TEXT       shift, and go to state 8
    NEXT          shift, and go to state 9
    ALWAYS        shift, and go to state 10
    SOMETIME      shift, and go to state 11
    LEFT_BRACKET  shift, and go to state 12

    formula         go to state 34
    binary_formula  go to state 14
    unary_formula   go to state 15


State 26

   18 binary_formula: formula EQUIVALENCE . formula

    FALSE         shift, and go to state 3
    TRUE          shift, and go to state 4
    NAME          shift, and go to state 5
    NOT           shift, and go to state 6
    AND_TEXT      shift, and go to state 7
    OR_TEXT       shift, and go to state 8
    NEXT          shift, and go to state 9
    ALWAYS        shift, and go to state 10
    SOMETIME      shift, and go to state 11
    LEFT_BRACKET  shift, and go to state 12

    formula         go to state 35
    binary_formula  go to state 14
    unary_formula   go to state 15


State 27

   15 binary_formula: formula UNTIL . formula

    FALSE         shift, and go to state 3
    TRUE          shift, and go to state 4
    NAME          shift, and go to state 5
    NOT           shift, and go to state 6
    AND_TEXT      shift, and go to state 7
    OR_TEXT       shift, and go to state 8
    NEXT          shift, and go to state 9
    ALWAYS        shift, and go to state 10
    SOMETIME      shift, and go to state 11
    LEFT_BRACKET  shift, and go to state 12

    formula         go to state 36
    binary_formula  go to state 14
    unary_formula   go to state 15


State 28

   16 binary_formula: formula UNLESS . formula

    FALSE         shift, and go to state 3
    TRUE          shift, and go to state 4
    NAME          shift, and go to state 5
    NOT           shift, and go to state 6
    AND_TEXT      shift, and go to state 7
    OR_TEXT       shift, and go to state 8
    NEXT          shift, and go to state 9
    ALWAYS        shift, and go to state 10
    SOMETIME      shift, and go to state 11
    LEFT_BRACKET  shift, and go to state 12

    formula         go to state 37
    binary_formula  go to state 14
    unary_formula   go to state 15


State 29

    6 formula: AND_TEXT LEFT_BRACKET LEFT_SQUARE_BRACKET . formula_list_at_least_two RIGHT_SQUARE_BRACKET RIGHT_BRACKET
    8        | AND_TEXT LEFT_BRACKET LEFT_SQUARE_BRACKET . formula RIGHT_SQUARE_BRACKET RIGHT_BRACKET

    FALSE         shift, and go to state 3
    TRUE          shift, and go to state 4
    NAME          shift, and go to state 5
    NOT           shift, and go to state 6
    AND_TEXT      shift, and go to state 7
    OR_TEXT       shift, and go to state 8
    NEXT          shift, and go to state 9
    ALWAYS        shift, and go to state 10
    SOMETIME      shift, and go to state 11
    LEFT_BRACKET  shift, and go to state 12

    formula                    go to state 38
    formula_list_at_least_two  go to state 39
    binary_formula             go to state 14
    unary_formula              go to state 15


State 30

    7 formula: OR_TEXT LEFT_BRACKET LEFT_SQUARE_BRACKET . formula_list_at_least_two RIGHT_SQUARE_BRACKET RIGHT_BRACKET
    9        | OR_TEXT LEFT_BRACKET LEFT_SQUARE_BRACKET . formula RIGHT_SQUARE_BRACKET RIGHT_BRACKET

    FALSE         shift, and go to state 3
    TRUE          shift, and go to state 4
    NAME          shift, and go to state 5
    NOT           shift, and go to state 6
    AND_TEXT      shift, and go to state 7
    OR_TEXT       shift, and go to state 8
    NEXT          shift, and go to state 9
    ALWAYS        shift, and go to state 10
    SOMETIME      shift, and go to state 11
    LEFT_BRACKET  shift, and go to state 12

    formula                    go to state 40
    formula_list_at_least_two  go to state 41
    binary_formula             go to state 14
    unary_formula              go to state 15


State 31

    3 formula: LEFT_BRACKET formula RIGHT_BRACKET .

    $default  reduce using rule 3 (formula)


State 32

   13 binary_formula: formula . AND formula
   13               | formula AND formula .
   14               | formula . OR formula
   15               | formula . UNTIL formula
   16               | formula . UNLESS formula
   17               | formula . IMPLICATION formula
   18               | formula . EQUIVALENCE formula

    AND  shift, and go to state 23
    OR   shift, and go to state 24

    $default  reduce using rule 13 (binary_formula)


State 33

   13 binary_formula: formula . AND formula
   14               | formula . OR formula
   14               | formula OR formula .
   15               | formula . UNTIL formula
   16               | formula . UNLESS formula
   17               | formula . IMPLICATION formula
   18               | formula . EQUIVALENCE formula

    AND  shift, and go to state 23
    OR   shift, and go to state 24

    $default  reduce using rule 14 (binary_formula)


State 34

   13 binary_formula: formula . AND formula
   14               | formula . OR formula
   15               | formula . UNTIL formula
   16               | formula . UNLESS formula
   17               | formula . IMPLICATION formula
   17               | formula IMPLICATION formula .
   18               | formula . EQUIVALENCE formula

    AND          shift, and go to state 23
    OR           shift, and go to state 24
    IMPLICATION  shift, and go to state 25
    EQUIVALENCE  shift, and go to state 26
    UNTIL        shift, and go to state 27
    UNLESS       shift, and go to state 28

    $default  reduce using rule 17 (binary_formula)


State 35

   13 binary_formula: formula . AND formula
   14               | formula . OR formula
   15               | formula . UNTIL formula
   16               | formula . UNLESS formula
   17               | formula . IMPLICATION formula
   18               | formula . EQUIVALENCE formula
   18               | formula EQUIVALENCE formula .

    AND          shift, and go to state 23
    OR           shift, and go to state 24
    IMPLICATION  shift, and go to state 25
    EQUIVALENCE  shift, and go to state 26
    UNTIL        shift, and go to state 27
    UNLESS       shift, and go to state 28

    $default  reduce using rule 18 (binary_formula)


State 36

   13 binary_formula: formula . AND formula
   14               | formula . OR formula
   15               | formula . UNTIL formula
   15               | formula UNTIL formula .
   16               | formula . UNLESS formula
   17               | formula . IMPLICATION formula
   18               | formula . EQUIVALENCE formula

    AND          shift, and go to state 23
    OR           shift, and go to state 24
    IMPLICATION  shift, and go to state 25
    EQUIVALENCE  shift, and go to state 26
    UNTIL        shift, and go to state 27
    UNLESS       shift, and go to state 28

    $default  reduce using rule 15 (binary_formula)


State 37

   13 binary_formula: formula . AND formula
   14               | formula . OR formula
   15               | formula . UNTIL formula
   16               | formula . UNLESS formula
   16               | formula UNLESS formula .
   17               | formula . IMPLICATION formula
   18               | formula . EQUIVALENCE formula

    AND          shift, and go to state 23
    OR           shift, and go to state 24
    IMPLICATION  shift, and go to state 25
    EQUIVALENCE  shift, and go to state 26
    UNTIL        shift, and go to state 27
    UNLESS       shift, and go to state 28

    $default  reduce using rule 16 (binary_formula)


State 38

    8 formula: AND_TEXT LEFT_BRACKET LEFT_SQUARE_BRACKET formula . RIGHT_SQUARE_BRACKET RIGHT_BRACKET
   11 formula_list_at_least_two: formula . COMMA formula
   13 binary_formula: formula . AND formula
   14               | formula . OR formula
   15               | formula . UNTIL formula
   16               | formula . UNLESS formula
   17               | formula . IMPLICATION formula
   18               | formula . EQUIVALENCE formula

    AND                   shift, and go to state 23
    OR                    shift, and go to state 24
    IMPLICATION           shift, and go to state 25
    EQUIVALENCE           shift, and go to state 26
    UNTIL                 shift, and go to state 27
    UNLESS                shift, and go to state 28
    COMMA                 shift, and go to state 42
    RIGHT_SQUARE_BRACKET  shift, and go to state 43


State 39

    6 formula: AND_TEXT LEFT_BRACKET LEFT_SQUARE_BRACKET formula_list_at_least_two . RIGHT_SQUARE_BRACKET RIGHT_BRACKET
   12 formula_list_at_least_two: formula_list_at_least_two . COMMA formula

    COMMA                 shift, and go to state 44
    RIGHT_SQUARE_BRACKET  shift, and go to state 45


State 40

    9 formula: OR_TEXT LEFT_BRACKET LEFT_SQUARE_BRACKET formula . RIGHT_SQUARE_BRACKET RIGHT_BRACKET
   11 formula_list_at_least_two: formula . COMMA formula
   13 binary_formula: formula . AND formula
   14               | formula . OR formula
   15               | formula . UNTIL formula
   16               | formula . UNLESS formula
   17               | formula . IMPLICATION formula
   18               | formula . EQUIVALENCE formula

    AND                   shift, and go to state 23
    OR                    shift, and go to state 24
    IMPLICATION           shift, and go to state 25
    EQUIVALENCE           shift, and go to state 26
    UNTIL                 shift, and go to state 27
    UNLESS                shift, and go to state 28
    COMMA                 shift, and go to state 42
    RIGHT_SQUARE_BRACKET  shift, and go to state 46


State 41

    7 formula: OR_TEXT LEFT_BRACKET LEFT_SQUARE_BRACKET formula_list_at_least_two . RIGHT_SQUARE_BRACKET RIGHT_BRACKET
   12 formula_list_at_least_two: formula_list_at_least_two . COMMA formula

    COMMA                 shift, and go to state 44
    RIGHT_SQUARE_BRACKET  shift, and go to state 47


State 42

   11 formula_list_at_least_two: formula COMMA . formula

    FALSE         shift, and go to state 3
    TRUE          shift, and go to state 4
    NAME          shift, and go to state 5
    NOT           shift, and go to state 6
    AND_TEXT      shift, and go to state 7
    OR_TEXT       shift, and go to state 8
    NEXT          shift, and go to state 9
    ALWAYS        shift, and go to state 10
    SOMETIME      shift, and go to state 11
    LEFT_BRACKET  shift, and go to state 12

    formula         go to state 48
    binary_formula  go to state 14
    unary_formula   go to state 15


State 43

    8 formula: AND_TEXT LEFT_BRACKET LEFT_SQUARE_BRACKET formula RIGHT_SQUARE_BRACKET . RIGHT_BRACKET

    RIGHT_BRACKET  shift, and go to state 49


State 44

   12 formula_list_at_least_two: formula_list_at_least_two COMMA . formula

    FALSE         shift, and go to state 3
    TRUE          shift, and go to state 4
    NAME          shift, and go to state 5
    NOT           shift, and go to state 6
    AND_TEXT      shift, and go to state 7
    OR_TEXT       shift, and go to state 8
    NEXT          shift, and go to state 9
    ALWAYS        shift, and go to state 10
    SOMETIME      shift, and go to state 11
    LEFT_BRACKET  shift, and go to state 12

    formula         go to state 50
    binary_formula  go to state 14
    unary_formula   go to state 15


State 45

    6 formula: AND_TEXT LEFT_BRACKET LEFT_SQUARE_BRACKET formula_list_at_least_two RIGHT_SQUARE_BRACKET . RIGHT_BRACKET

    RIGHT_BRACKET  shift, and go to state 51


State 46

    9 formula: OR_TEXT LEFT_BRACKET LEFT_SQUARE_BRACKET formula RIGHT_SQUARE_BRACKET . RIGHT_BRACKET

    RIGHT_BRACKET  shift, and go to state 52


State 47

    7 formula: OR_TEXT LEFT_BRACKET LEFT_SQUARE_BRACKET formula_list_at_least_two RIGHT_SQUARE_BRACKET . RIGHT_BRACKET

    RIGHT_BRACKET  shift, and go to state 53


State 48

   11 formula_list_at_least_two: formula COMMA formula .
   13 binary_formula: formula . AND formula
   14               | formula . OR formula
   15               | formula . UNTIL formula
   16               | formula . UNLESS formula
   17               | formula . IMPLICATION formula
   18               | formula . EQUIVALENCE formula

    AND          shift, and go to state 23
    OR           shift, and go to state 24
    IMPLICATION  shift, and go to state 25
    EQUIVALENCE  shift, and go to state 26
    UNTIL        shift, and go to state 27
    UNLESS       shift, and go to state 28

    $default  reduce using rule 11 (formula_list_at_least_two)


State 49

    8 formula: AND_TEXT LEFT_BRACKET LEFT_SQUARE_BRACKET formula RIGHT_SQUARE_BRACKET RIGHT_BRACKET .

    $default  reduce using rule 8 (formula)


State 50

   12 formula_list_at_least_two: formula_list_at_least_two COMMA formula .
   13 binary_formula: formula . AND formula
   14               | formula . OR formula
   15               | formula . UNTIL formula
   16               | formula . UNLESS formula
   17               | formula . IMPLICATION formula
   18               | formula . EQUIVALENCE formula

    AND          shift, and go to state 23
    OR           shift, and go to state 24
    IMPLICATION  shift, and go to state 25
    EQUIVALENCE  shift, and go to state 26
    UNTIL        shift, and go to state 27
    UNLESS       shift, and go to state 28

    $default  reduce using rule 12 (formula_list_at_least_two)


State 51

    6 formula: AND_TEXT LEFT_BRACKET LEFT_SQUARE_BRACKET formula_list_at_least_two RIGHT_SQUARE_BRACKET RIGHT_BRACKET .

    $default  reduce using rule 6 (formula)


State 52

    9 formula: OR_TEXT LEFT_BRACKET LEFT_SQUARE_BRACKET formula RIGHT_SQUARE_BRACKET RIGHT_BRACKET .

    $default  reduce using rule 9 (formula)


State 53

    7 formula: OR_TEXT LEFT_BRACKET LEFT_SQUARE_BRACKET formula_list_at_least_two RIGHT_SQUARE_BRACKET RIGHT_BRACKET .

    $default  reduce using rule 7 (formula)
